# novelty

./: .gitignore  Cargo.toml
docs/: databases.md  repertoire-building.md  repertoire-from-games.md
src/: analysis_session.rs  constants.rs  engine_catalog.rs  engine_shapes.rs  engine_state.rs  engine_uci.rs  engines.rs  eval_display.rs  graph.rs  lichess.rs  main.rs  move_tree.rs  opening_book.rs  opening_explorer.rs  panel_tabs.rs  performance.rs  pgn.rs  pgn_tree.rs  profiles.rs  repertoire.rs  repertoire_import.rs  repertoire_session.rs  session.rs  tab.rs
src/app/: explorer.rs  lichess_account.rs  load.rs  mod.rs  repertoire.rs  repertoire_import_load.rs  uci.rs
src/board/: apply.rs  config.rs  mod.rs
src/fetch/: chesscom.rs  lichess.rs  mod.rs
src/ui/: analysis.rs  controls.rs  engine_panel.rs  engine_pick.rs  engines.rs  explorer_moves.rs  history.rs  home.rs  mod.rs  next_moves.rs  repertoire.rs  repertoire_tree.rs  settings.rs  sidebar.rs  stub.rs  tabs.rs
src/ui/analysis/: history.rs  mod.rs  panel.rs  sidebar.rs
src/ui/layout/: mod.rs  navigation.rs  sidebar.rs
src/ui/moves/: mod.rs  shared.rs
src/ui/panel/: mod.rs  right.rs
src/ui/repertoire/: history.rs  import.rs  mod.rs  sidebar.rs
