[package]
name = "novelty"
version = "0.1.0"
edition = "2024"
description = "Desktop chess opening preparation and repertoire analysis"
license = "GPL-3.0-or-later"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "b7e63cc29018c27bb24788ddb212f4cbdd861334" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "b7e63cc29018c27bb24788ddb212f4cbdd861334", package = "gpui-component-assets" }
gpui-chessboard = { git = "https://github.com/crabname/gpui-chessboard.git" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = { version = "0.30", default-features = false, features = ["variant"] }
ruci = { version = "2.1", default-features = false, features = ["engine-sync"] }
urlencoding = "2"
litchee = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rfd = "0.15"
zip = "2"
tar = "0.4"
